<resources>
    <string name="app_name">No Pikun</string>

    <string name="enterPasswordLength">Enter password length below </string>
    <string name="passwordLengthHint">Password Length</string>
    <string name="btn_gen">Generate</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="passwordTitle">Password Title: </string>
    <string name="password">Password: </string>
    <string name="passwordStrength">Strength: </string>
    <string name="enter_title_here">Type Title here</string>

    <!-- toast messages -->
    <string name="saved">Saved :)</string>
    <string name="fail_to_save">Fail To Save :( </string>
    <string name="enter_password_title">Password Title Required</string>
    <string name="delete_done">Done ✓ </string>
    <string name="enter_length">Password Length Required</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="create_password">Create Password</string>
    <string name="number_here">number here</string>
    <string name="enter_the_password_length">Enter The Password Length</string>
    <string name="please_input_your_pin">Please Input Your Pin</string>
    <string name="please_set_your_pin">Please Set Your Pin</string>
    <string name="enter_your_username_or_email">Enter your username or email</string>
    <string name="email_username">Email/Username:</string>
    <string name="username">Username</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="no_password_saved">No Password Saved</string>
</resources>
