<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Activity.PasswordInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordTitle"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/tv_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/tv_Username"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/ed_password" />


    <com.google.android.material.button.MaterialButton
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="20dp"
        android:layout_width="150dp"
        android:id="@+id/btn_delete"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_delete" />

</LinearLayout>